# text2dsl

./: .env.example  .flake8  .gitignore  Makefile  README.md  pyproject.toml
docs/: configuration.md  development.md  index.md  installation.md  troubleshooting.md  usage.md  voice.md
examples/: basic_usage.py  cli_verbose.sh  env_config.sh
tests/: __init__.py  test_layers.py  test_parser.py
text2dsl/: __init__.py  __main__.py  orchestrator.py
text2dsl/core/: __init__.py  context_manager.py  dsl_parser.py  suggestion_engine.py
text2dsl/layers/: __init__.py  text2docker.py  text2git.py  text2make.py  text2python.py  text2shell.py  voice_layer.py
text2dsl/utils/: __init__.py  archive.py  env.py
